# table-rag-plus

./: LICENSE  README.md  app.py  bbq_manufacturing.db  chainlit.md  employee_database.db  pyproject.toml  run.py
lookups/: sqlite3-functions.json
prompts/: dig_deeper.prompt  explain_result.prompt  query_classification.prompt  query_expansion.prompt  query_healing.prompt  sql_generation.prompt
scripts/: generate_database.py
table_rag/: __init__.py
